AM_CPPFLAGS = -Ienigma

noinst_LTLIBRARIES = enigma_genuine_dreambox.la

enigma_genuine_dreambox_la_SOURCES = enigma_genuine_dreambox.cpp

enigma_genuine_dreambox_la_LDFLAGS = -rpath $(PLUGINDIR) -module

enigma_genuine_dreambox_la_CXXFLAGS = -fno-rtti -fno-exceptions $(SIGC_CFLAGS) $(XMLTREE_CFLAGS)

